<resources>
    <string name="app_name">WeatherMan</string>
    <string name="current_temp">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="max_temp">Max</string>
    <string name="min_temp">Min</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="last_updated">Last Updated</string>
    <string name="last_checked">Last Checked</string>
    <string name="location">Location</string>
    <string name="location_left">(</string>
    <string name="location_right">)</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_dir">Wind Direction</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="day_length">Length of Day:</string>
    <string name="cant_remove_first_location">Current location can\'t be removed</string>
    <string name="gps_needed_for_location">GPS is needed for current location detection</string>
    <string name="permission_required">Permission is required for location detection</string>
    <string name="server_not_found">Could not connect to the server</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_gps_updating_previous_location">Weather updated for previous location</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="location_settings_not_available">Location settings are not available on this device</string>
    <string name="city_already_exists">This city has already been added. Please choose a different city.</string>
    <string name="add_city">Add City</string>
    <string name="remove_city">Remove City</string>
    <string name="network_error">Network Error:\n</string>
    <string name="remove_a_city_before_adding">Only 10 cities can be added!\nRemove one before adding another</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="location_added">Location added</string>
    <string name="location_removed">Location removed</string>
    <string name="remove_city_location">Remove City Location</string>
    <string name="do_you_want_to_remove_location">Do you want to remove this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="got_it">Got it</string>
    <string name="details">Details</string>
    <string name="swipe_left_or_right">Swipe left or right to toggle between cities</string>
    <string name="humidity_notification">Humidity</string>
    <string name="forward_slash">/</string>

    <!-- Preferences -->
    <string name="units_header">Units</string>
    <string name="notification_header">Notifications</string>
    <string name="weather_units">Weather Units</string>
    <string name="display_notification">Turn Notifications On and Off</string>
    <string name="notification_frequency">Notification Frequency</string>
    <string name="notification_frequency_summary">Set how often you\'d like to receive notifications</string>
    <string name="notification_channel_description">Shows notifications whenever current currentWeather is updated</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="location_pin">Location Pin</string>
</resources>