<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--Removed to support FLAG_LAYOUT_NO_LIMITS-->
    <!--<item-->
    <!--android:id="@+id/menu_more"-->
    <!--android:icon="@drawable/ic_outline_more_vert_24px"-->
    <!--android:title="@string/more"-->
    <!--android:visible="true"-->
    <!--app:showAsAction="always"-->
    <!--tools:ignore="AlwaysShowAction">-->

    <!--<menu>-->

    <item
        android:id="@+id/menu_add_city"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/add_city"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_remove_city"
        android:icon="@drawable/ic_menu_remove"
        android:orderInCategory="20"
        android:title="@string/remove_city"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="30"
        android:title="@string/settings"
        app:showAsAction="never" />

    <!--</menu>-->

    <!--</item>-->

</menu>