<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/notification_icon_image_view"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:contentDescription="@string/weather_icon"
        android:src="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/notification_icon_image_view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_city_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_current_temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/notification_max_temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:text="@string/forward_slash"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title" />

            <TextView
                android:id="@+id/notification_min_temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="32dp"
                android:text="@string/humidity_notification"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/notification_humidity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>